// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConditionExpression renders with appliesTo, operator and value supplied 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  direction="row"
  gutterSize="m"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiPopover
      anchorPosition="downLeft"
      button={
        <EuiExpressionButton
          buttonValue="diff from typical"
          description="when"
          isActive={false}
          onClick={[Function]}
        />
      }
      closePopover={[Function]}
      hasArrow={true}
      id="appliesToPopover"
      isOpen={false}
      ownFocus={true}
      panelPaddingSize="none"
      withTitle={true}
    >
      <div
        style={
          Object {
            "zIndex": "200",
          }
        }
      >
        <EuiPopoverTitle>
          When
        </EuiPopoverTitle>
        <EuiExpression
          style={
            Object {
              "width": 200,
            }
          }
        >
          <EuiSelect
            compressed={false}
            fullWidth={false}
            hasNoInitialSelection={false}
            isLoading={false}
            onChange={[Function]}
            options={
              Array [
                Object {
                  "text": "actual",
                  "value": "actual",
                },
                Object {
                  "text": "typical",
                  "value": "typical",
                },
                Object {
                  "text": "diff from typical",
                  "value": "diff_from_typical",
                },
              ]
            }
            value="diff_from_typical"
          />
        </EuiExpression>
      </div>
    </EuiPopover>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiPopover
      anchorPosition="downLeft"
      button={
        <EuiExpressionButton
          buttonValue="123"
          description="is greater than"
          isActive={false}
          onClick={[Function]}
        />
      }
      closePopover={[Function]}
      hasArrow={true}
      id="operatorValuePopover"
      isOpen={false}
      ownFocus={true}
      panelPaddingSize="none"
      withTitle={true}
    >
      <div
        style={
          Object {
            "zIndex": "200",
          }
        }
      >
        <EuiPopoverTitle>
          Is
        </EuiPopoverTitle>
        <EuiExpression>
          <EuiFlexGroup
            alignItems="stretch"
            component="div"
            direction="row"
            gutterSize="l"
            justifyContent="flexStart"
            responsive={true}
            style={
              Object {
                "maxWidth": 450,
              }
            }
            wrap={false}
          >
            <EuiFlexItem
              component="div"
              grow={false}
              style={
                Object {
                  "width": 250,
                }
              }
            >
              <EuiSelect
                compressed={false}
                fullWidth={false}
                hasNoInitialSelection={false}
                isLoading={false}
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "text": "less than",
                      "value": "lt",
                    },
                    Object {
                      "text": "less than or equal to",
                      "value": "lte",
                    },
                    Object {
                      "text": "greater than",
                      "value": "gt",
                    },
                    Object {
                      "text": "greater than or equal to",
                      "value": "gte",
                    },
                  ]
                }
                value="gt"
              />
            </EuiFlexItem>
            <EuiFlexItem
              component="div"
              grow={false}
              style={
                Object {
                  "width": 200,
                }
              }
            >
              <EuiFieldNumber
                compressed={false}
                fullWidth={false}
                isLoading={false}
                onChange={[Function]}
                value={123}
              />
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiExpression>
      </div>
    </EuiPopover>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiButtonIcon
      aria-label="Next"
      color="danger"
      iconSize="m"
      iconType="trash"
      onClick={[Function]}
      size="s"
      type="button"
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`ConditionExpression renders with only value supplied 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  direction="row"
  gutterSize="m"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiPopover
      anchorPosition="downLeft"
      button={
        <EuiExpressionButton
          buttonValue=""
          description="when"
          isActive={false}
          onClick={[Function]}
        />
      }
      closePopover={[Function]}
      hasArrow={true}
      id="appliesToPopover"
      isOpen={false}
      ownFocus={true}
      panelPaddingSize="none"
      withTitle={true}
    >
      <div
        style={
          Object {
            "zIndex": "200",
          }
        }
      >
        <EuiPopoverTitle>
          When
        </EuiPopoverTitle>
        <EuiExpression
          style={
            Object {
              "width": 200,
            }
          }
        >
          <EuiSelect
            compressed={false}
            fullWidth={false}
            hasNoInitialSelection={false}
            isLoading={false}
            onChange={[Function]}
            options={
              Array [
                Object {
                  "text": "actual",
                  "value": "actual",
                },
                Object {
                  "text": "typical",
                  "value": "typical",
                },
                Object {
                  "text": "diff from typical",
                  "value": "diff_from_typical",
                },
              ]
            }
          />
        </EuiExpression>
      </div>
    </EuiPopover>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiPopover
      anchorPosition="downLeft"
      button={
        <EuiExpressionButton
          buttonValue="123"
          description="is "
          isActive={false}
          onClick={[Function]}
        />
      }
      closePopover={[Function]}
      hasArrow={true}
      id="operatorValuePopover"
      isOpen={false}
      ownFocus={true}
      panelPaddingSize="none"
      withTitle={true}
    >
      <div
        style={
          Object {
            "zIndex": "200",
          }
        }
      >
        <EuiPopoverTitle>
          Is
        </EuiPopoverTitle>
        <EuiExpression>
          <EuiFlexGroup
            alignItems="stretch"
            component="div"
            direction="row"
            gutterSize="l"
            justifyContent="flexStart"
            responsive={true}
            style={
              Object {
                "maxWidth": 450,
              }
            }
            wrap={false}
          >
            <EuiFlexItem
              component="div"
              grow={false}
              style={
                Object {
                  "width": 250,
                }
              }
            >
              <EuiSelect
                compressed={false}
                fullWidth={false}
                hasNoInitialSelection={false}
                isLoading={false}
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "text": "less than",
                      "value": "lt",
                    },
                    Object {
                      "text": "less than or equal to",
                      "value": "lte",
                    },
                    Object {
                      "text": "greater than",
                      "value": "gt",
                    },
                    Object {
                      "text": "greater than or equal to",
                      "value": "gte",
                    },
                  ]
                }
              />
            </EuiFlexItem>
            <EuiFlexItem
              component="div"
              grow={false}
              style={
                Object {
                  "width": 200,
                }
              }
            >
              <EuiFieldNumber
                compressed={false}
                fullWidth={false}
                isLoading={false}
                onChange={[Function]}
                value={123}
              />
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiExpression>
      </div>
    </EuiPopover>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiButtonIcon
      aria-label="Next"
      color="danger"
      iconSize="m"
      iconType="trash"
      onClick={[Function]}
      size="s"
      type="button"
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;
